--- a/webapp/channels/src/sass/responsive/_mobile.scss
+++ b/webapp/channels/src/sass/responsive/_mobile.scss
@@ -373,19 +373,10 @@
     }
 
     .emoji-picker {
-        // !important is used to overide inline styles
-        // used on larger screens
-        top: 0 !important;
-        right: auto !important;
-        bottom: auto !important;
-        left: 0 !important;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         border-radius: 0;
-
-        >ul {
-            margin-top: 66px;
-        }
+        margin-right: 0;
 
         .search-grid-container {
             height: calc(100vh - 170px);
@@ -406,8 +397,7 @@
         }
     }
 
-    .emoji-picker__header,
-    .modal-body .emoji-picker .emoji-picker__header {
+    .emoji-picker__header {
         display: block;
     }
 
